# sandbox

./: .gitignore  tmp_cga_test.html
ark/: CLAUDE.md  Cargo.toml  README.md  ark.py  setup.sh
ark/.claude/: settings.local.json
ark/codegen/: Cargo.toml
ark/codegen/src/: lib.rs
ark/docs/: DSL_SPEC.md
ark/dsl/: Cargo.toml
ark/dsl/grammar/: ark.pest
ark/dsl/src/: lib.rs  parse.rs
ark/orchestrator/: Cargo.toml
ark/runtime/: Cargo.toml
ark/runtime/src/: ecs.rs  (+3 more)
ark/specs/: root.ark  test_expression.ark  test_minimal.ark  test_minimal.html  test_orgchart.ark
ark/tests/: conftest.py  test-results.md  test_agent_backend.py  test_agent_codegen.py  test_agent_gateway.py  test_agent_integration.py  test_agent_parser.py  test_agent_runner.py  test_agent_scheduler.py  test_agent_schema.py  test_agent_skill.py  test_agent_verify.py  test_agent_viz.py  test_class_instance_index.py  test_codegen_expression.py  test_codegraph_ark.py  test_codegraph_integration.py  test_codegraph_python.py  test_codegraph_queries.py  test_codegraph_rust.py  test_codegraph_store.py  test_codegraph_verify.py  test_diff.py  test_dispatch.py  test_evolution_codegen.py  test_evolution_constraint.py  test_evolution_fitness.py  test_evolution_integration.py  test_evolution_optimizer.py  test_evolution_parser.py  test_evolution_runner.py  test_evolution_verify.py  test_parser_entities.py  test_parser_errors.py  test_parser_expression_items.py  test_parser_expressions.py  test_parser_pipe.py  test_parser_primitives.py  test_parser_smoke.py  test_pipeline_expression.py  (+18 more)
ark/verify/: Cargo.toml
(+1088 files in other folders)
