[package]
name = "ark-orchestrator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ark-orchestrator"
path = "src/main.rs"

[dependencies]
ark-dsl = { path = "../dsl" }
ark-codegen = { path = "../codegen" }
ark-verify = { path = "../verify" }
anyhow.workspace = true
clap = { workspace = true }
serde.workspace = true
serde_json.workspace = true
